adding tagline back

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
-title: Capsicum: If pain must come, let it come quickly
+title: Capsicum
+description: If pain must come, let it come quickly
 ---
 
 <div class="home" id="home">
