--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 ---
 layout: post-index
 title: Capsicum
-description: "If pain comes, may it come quickly."
+description: "Describe this nonsense."
+tags: [Jekyll, theme, themes, responsive, blog, modern]
 comments: false
+image:
+  feature: abstract-1.jpg
+  credit: dargadgetz
+  creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
 ---
 
 {% for post in paginator.posts %}
